--- a/c_trust/.env.example
+++ b/c_trust/.env.example
@@ -1,4 +1,4 @@
-# C-TRUST SYSTEM ENVIRONMENT CONFIGURATION
+# C-TRUST Environment Configuration
 # Copy this file to .env and fill in your values
 
 # ========================================
@@ -16,8 +16,6 @@ LOG_LEVEL=INFO
 API_HOST=0.0.0.0
 API_PORT=8000
 API_PREFIX=/api/v1
-
-# CORS Configuration (comma-separated origins)
 CORS_ORIGINS=http://localhost:3000,http://localhost:5173
 
 
@@ -30,7 +28,7 @@ REDIS_DB=0
 REDIS_PASSWORD=
 
 # ========================================
-# Groq API CONFIGURATION (Primary LLM Provider)
+# AI/ML CONFIGURATION
 # ========================================
 # Groq API Configuration
 GROQ_API_KEY= your_groq_api_key_here
@@ -52,7 +50,7 @@ LANGCHAIN_API_KEY= your_langchain_api_key_here
 # DATA SOURCE CONFIGURATION
 # ========================================
 # Path to NEST 2.0 dataset
-DATA_ROOT_PATH=...norvatas/Data for problem Statement 1/NEST 2.0 Data files_Anonymized/QC Anonymized Study Files
+DATA_ROOT_PATH=.../Data for problem Statement 1/NEST 2.0 Data files_Anonymized/QC Anonymized Study Files
 
 # Data processing settings
 BATCH_SIZE=10
